<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.EditClanActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- CLAN NAME TEXT -->

        <TextView
            android:id="@+id/tvName"
            style="@style/HeadingsTextAds"
            android:text="@string/clan_name" />

        <EditText
            android:id="@+id/etName"
            style="@style/TextAds.Edit"
            android:hint="@string/clan_name_hint"
            android:inputType="text" />

        <LinearLayout style="@style/LineEditAds" />


        <!-- CLAN LEVEL TEXT -->

        <TextView
            android:id="@+id/tvLevel"
            style="@style/HeadingsTextAds"
            android:text="@string/clan_level" />

        <EditText
            android:id="@+id/etLevel"
            style="@style/TextAds.Edit"
            android:hint="@string/clan_level_hint"
            android:inputType="number" />

        <LinearLayout style="@style/LineEditAds" />


        <!-- CLAN TOURNAMENT TEXT -->

        <TextView
            android:id="@+id/tvTournament"
            style="@style/HeadingsTextAds"
            android:text="@string/clan_tournament" />

        <EditText
            android:id="@+id/etTournament"
            style="@style/TextAds.Edit"
            android:hint="@string/clan_tournament_hint"
            android:inputType="number" />

        <LinearLayout style="@style/LineEditAds" />


        <!-- CLAN DESCRIPTION TEXT -->

        <TextView
            android:id="@+id/tvDescription"
            style="@style/HeadingsTextAds"
            android:text="@string/clan_description" />

        <EditText
            android:id="@+id/etDescription"
            style="@style/TextAds.Edit"
            android:hint="@string/clan_description_hint"
            android:inputType="text" />

        <LinearLayout style="@style/LineEditAds">

        </LinearLayout>



        <!-- CLAN TEL TEXT -->

        <TextView
            android:id="@+id/tvTel"
            style="@style/HeadingsTextAds"
            android:text="@string/tel_number" />

        <EditText
            android:id="@+id/etTel"
            style="@style/TextAds.Edit"
            android:hint="@string/tel_number_hint"
            android:inputType="phone" />

        <LinearLayout style="@style/LineEditAds">

        </LinearLayout>



        <!-- CLAN EMAIL TEXT -->

        <TextView
            android:id="@+id/tvEmail"
            style="@style/HeadingsTextAds"
            android:text="@string/email_adress" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/TextAds.Edit"
            android:hint="@string/email_adress_hint"
            android:inputType="textEmailAddress" />

        <LinearLayout style="@style/LineEditAds">

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickPublishClan"
        android:text="@string/clan_publish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>