<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_main_light"
    android:paddingBottom="2dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_image_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/tv_title"
                android:textColor="@color/light_green"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="1sp"/>

            <LinearLayout style="@style/LineEditAds" />

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="4dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_default_image"
                android:contentDescription="@string/main_image" />

            <LinearLayout style="@style/LineEditAds" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/description_logo"
                android:textColor="@color/ic_main" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/any_text"
                android:textColor="@color/light_green" />

        </LinearLayout>

            <LinearLayout style="@style/LineEditAds" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/price_logo"
                android:textColor="@color/ic_main" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/some_number"
                android:textColor="@color/light_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/symbol_rub"
                android:textColor="@color/light_green" />

        </LinearLayout>



            <LinearLayout style="@style/LineEditAds" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imViewCounter"
                        app:srcCompat="@drawable/ic_eye"
                        android:contentDescription="@string/views"
                        style="@style/Icon" />

                    <TextView
                        android:id="@+id/tvViewCounter"
                        android:text="@string/some_number"
                        style="@style/ViewsAndFavoritesCounters" />

                    <ImageButton
                        android:id="@+id/ibFav"
                        app:srcCompat="@drawable/ic_favorite_on"
                        android:contentDescription="@string/favorites"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        style="@style/Icon" />

                    <TextView
                        android:id="@+id/tvFavCounter"
                        android:text="@string/some_number"
                        style="@style/ViewsAndFavoritesCounters" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/editPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ibEditAd"
                        android:background="@drawable/edit_image_button"
                        android:contentDescription="@string/edit_images"
                        app:srcCompat="@drawable/ic_edit"
                        style="@style/RoundButtons" />

                    <ImageButton
                        android:id="@+id/ibDelAd"
                        android:background="@drawable/edit_image_button"
                        android:contentDescription="@string/delete_images"
                        app:srcCompat="@drawable/ic_delete_images"
                        style="@style/RoundButtons" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>